--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --open"
+    "dev": "webpack serve --open",
+    "buld": "webpack"
   },
   "author": "",
   "license": "ISC",
