--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --open",
-    "buld": "webpack"
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
